--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Default test
         uses: ./
         with:
-          working-directory: "./test-storybook"
+          working-directory: './test-storybook'
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
